# wer_benchmark

./: .env  .gitignore  LEEME.md  README.md  main.py  pyproject.toml
asr/: __init__.py  asr_azaispeechbatchtr.py  asr_azaispeechfasttr.py  asr_azaispeechfasttrlang.py  asr_azure.py  asr_azure_lang.py  asr_azurelang.py  asr_base.py  asr_factory.py  asr_gemini.py  asr_google_transcribe.py  asr_openai.py  asr_utils.py  asr_whisper.py  audio_tools.py  compute_asr_benchmark.py  explore_dataset.py
notebooks/: explore_dataset.ipynb
tests/: test_mean_estraction.py
utils/: custom_objects.py  hf_dataset_downloader.py
