[project]
name = "wer_benchmark"
version = "0.1.0"
description = "A project to measure WER for different ASR and TTS services."
dependencies = [
    "azure-cognitiveservices-speech",
    "black>=25.1.0",
    "datasets>=3.4.1",
    "dotenv>=0.9.9",
    "ffmpeg-python",
    "google-genai>=1.9.0",
    "jiwer>=3.1.0",
    "matplotlib>=3.10.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wer_benchmark"]
